src/test/fail/inherit_builtin.lly
#[
SyntaxError: Cannot inherit from builtin classes. Sorry.
Where: File "test/fail/inherit_builtin.lly" at line 6
]#

class abc() < integer {  }
